# bug-hunter-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: bughunter-scan.yml
Docs/: Overall-plan.md  artifact-workflow.md  file-structure.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  robustness-checklist.md  scoring-system.md  test-library.md  tui-design.md
Docs/agents/: audit_agent.md  cli_ui_agent.md  context_manager_agent.md  overall_agent.md  planner_agent.md  retest_agent.md  testing_agent.md  vuln_scoring_agent.md
Docs/templates/: bug-report-template.md  index-template.md  test-plan-template.md  test-results-template.md
bughunter/: cli.py  interactive.py
bughunter/agents/dependency_audit/: sca_agent.py
bughunter/agents/dynamic_test/: dynamic_test_agent.py
bughunter/agents/evidence/: evidence_agent.py
bughunter/agents/fix/: agent.py
bughunter/agents/planner/: planner_agent.py
bughunter/agents/prompt_guard/: prompt_guard_agent.py
bughunter/agents/recon/: manifest_builder.py  recon_agent.py
bughunter/agents/retest/: agent.py
bughunter/agents/static_audit/: static_audit_agent.py
bughunter/core/: test_registry.py
bughunter/models/: __init__.py  evidence.py  manifest.py  policy.py  provider.py  report.py  run.py  score.py  test_plan.py  test_result.py
bughunter/reports/: json_exporter.py  markdown.py  sarif.py
bughunter/storage/: base.py  evidence_store.py  provider_store.py  recon_store.py  run_store.py  safety_store.py  schema.py  vector_store.py
bughunter/tui/: app.tcss
tests/integration/: test_semgrep_scanner.py
(+26 files in other folders)
