[project]
name = "bug-hunter-cli"
version = "0.1.0"
description = "Hexagonal, safety-first agentic vulnerability scanner"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Loki", email = "loki@example.com"}]
license = {text = "MIT"}
keywords = ["security", "scanner", "agent", "llm", "vulnerability"]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0.1",
    "langgraph>=0.0.30",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "langchain-openai>=0.1.0",
    "chromadb>=0.5.0",
    "langchain-google-genai>=1.0.0",
    "questionary>=2.0.1",
    "textual>=0.52.1",
    "mcp>=1.0.0",
    "semgrep>=1.60.0"
]

[project.scripts]
bughunter = "bughunter.cli:app"
bughunter-mcp = "bughunter.mcp_server:mcp.run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-mock>=3.12.0",
]


[tool.hatch.build.targets.wheel]
packages = ["bughunter"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
